# rpdiscordts

./: .env.default  .gitignore  .projectile  LICENSE  package.json  todo.org  tsconfig.json  user_data.sql
bot/: .env.default  package.json  pg-config.json  schema-cli-config.json  shell.nix  start.sh  tsconfig.json
bot/scripts/generate-schema/: db.js  index.js  ts.js
bot/src/: collection.ts  command-helpers.ts  command-info.ts  deploy-commands.ts  env-vars.ts  helpers.ts  index.ts  interaction-wrapper.ts  make-command.ts  make-message-actions.ts  sql-connections.ts
bot/src/commands/: character.ts  general.ts  ref.ts  roll.ts  settings.ts
bot/src/generated_schema/server_data/: index.ts
bot/src/generated_schema/user_data/: channels.ts  character_attributes.ts  characters.ts  codex_list.ts  command_usage.ts  index.ts  schema.json  server_mod_roles.ts  servers.ts  unique_servers.ts  unique_users.ts
bot/src/helpers/: array.ts  commands.ts  general.ts  observable.ts  paginator.ts  string.test.ts  string.ts  task.ts  types.ts  union.ts
dice/: build.sh  cabal.project.local  default.nix  release.nix  result  rpdiscorddice.cabal  run.sh  todo.org
dice/.hix-flake/: flake.nix
dice/app/: Main.hs
dice/copied-result/lib/ghc-9.6.7/lib/package.conf.d/: rpdiscorddice-0.1.0.0-3tZQAvTKYEgJXjHXLrF3az.conf
dice/copied-result/lib/ghc-9.6.7/lib/x86_64-linux-ghc-9.6.7/rpdiscorddice-0.1.0.0-3tZQAvTKYEgJXjHXLrF3az/Data/: Dice.dyn_hi  Dice.hi  Dice.p_hi  HistoryM.dyn_hi  HistoryM.hi  HistoryM.p_hi  KeepDrop.dyn_hi  KeepDrop.hi  KeepDrop.p_hi  NumTest.dyn_hi  NumTest.hi  NumTest.p_hi  Resolved.dyn_hi  Resolved.hi  Resolved.p_hi  Simplified.dyn_hi  Simplified.hi  Simplified.p_hi  Timeline.dyn_hi  Timeline.hi  Timeline.p_hi  UserNumber.dyn_hi  UserNumber.hi  UserNumber.p_hi
dice/copied-result/lib/ghc-9.6.7/lib/x86_64-linux-ghc-9.6.7/rpdiscorddice-0.1.0.0-3tZQAvTKYEgJXjHXLrF3az/Text/DiceParser/: AST.dyn_hi  AST.hi  AST.p_hi  Parser.dyn_hi  Parser.hi  Parser.p_hi
dice/copied-result/nix-support/: propagated-build-inputs
dice/src/Data/: Dice.hs  HistoryM.hs  KeepDrop.hs  NumTest.hs  Resolved.hs  Simplified.hs  Timeline.hs  UserNumber.hs
dice/src/Text/DiceParser/: AST.hs  Dice.hs  Parser.hs
dice/testsuite/tests/: Arb.hs  MainSpec.hs
dice/testsuite/tests/Data/: HistoryMSpec.hs  NumTestArb.hs  TimelineArb.hs  TimelineSpec.hs  UserNumberArb.hs
dice/testsuite/tests/Text/DiceParser/: ASTArb.hs  ASTSpec.hs  ParserSpec.hs
docs/: conf.py  privacy.rst  shell.nix
docs/_build/doctrees/: environment.pickle  index.doctree  privacy.doctree
docs/_build/doctrees/commands/: character.doctree  general.doctree  index.doctree  ref.doctree  roll.doctree  settings.doctree
docs/_build/doctrees/dice_reference/: characters.doctree  (+4 more)
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  privacy.html  search.html  searchindex.js
docs/commands/: character.rst  general.rst  index.rst  ref.rst  roll.rst  settings.rst
docs/dice_reference/: functions.rst  resolution.rst
psql/: interactive_setup.org
src/: command-helpers.ts  deploy-commands.ts  helpers.ts  make-command.ts
(+105 files in other folders)
